<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">text</string>
    <!-- slowly gonna introduce characters for vim macros -->
    <string name="_0"> </string>
    <string name="_1"> </string>
    <string name="_2"> </string>
    <string name="_3"> </string>
    <string name="_4"> </string>
    <string name="_5"> </string>
    <string name="_6"> </string>
    <string name="_7"> </string>
    <string name="_8"> </string>
    <string name="_9"> </string>
    <string name="a"> </string>
    <string name="b"> </string>
    <string name="c"> </string>
    <string name="d"> </string>
    <string name="e"> </string>
    <string name="f"> </string>
    <string name="g"> </string>
    <string name="h">H</string>
    <string name="i"> </string>
    <string name="j"> </string>
    <string name="k"> </string>
    <string name="l">L</string>
    <string name="m"> </string>
    <string name="n"> </string>
    <string name="o"> </string>
    <string name="p"> </string>
    <string name="q"> </string>
    <string name="r"> </string>
    <string name="s"> </string>
    <string name="t"> </string>
    <string name="u"> </string>
    <string name="v"> </string>
    <string name="w"> </string>
    <string name="x"> </string>
    <string name="y"> </string>
    <string name="z"> </string>
    <string name="comma"> </string>
    <string name="backspace"> </string>
    <string name="period"> </string>
    <string name="ctrl"> </string>
    <string name="shift"> </string>
    <string name="go"> </string>
</resources>
